--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=daniel
-PASSWORD=123456
+DATABASE=mongodb+srv://danieljwagener:<PASSWORD>@cluster0-gityr.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=eJjvBqaSRyqmuNJq
+DATABASE_USERNAME=danieljwagener
