--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "prettier": "^1.19.1"
+  },
+  "engines": {
+    "node": ">= 10.0"
   }
 }
