--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.9",
     "morgan": "^1.9.1",
-    "slugify": "^1.3.6"
+    "slugify": "^1.3.6",
+    "validator": "^12.0.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
