--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT=3000
 DATABASE=mongodb+srv://danieljwagener:<PASSWORD>@cluster0-gityr.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=eJjvBqaSRyqmuNJq
 DATABASE_USERNAME=danieljwagener
+
+JWT_SECRET=chocolate-rain-my-basketball-laundry-hurricane
+JWT_EXPIRES_IN=90d
