--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.9",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.1",
     "slugify": "^1.3.6",
     "validator": "^12.0.0"
   },
