--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.7.9",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
+    "pug": "^2.0.4",
     "slugify": "^1.3.6",
     "validator": "^12.0.0",
     "xss-clean": "^0.1.1"
