--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
     "pug": "^2.0.4",
+    "sharp": "^0.23.4",
     "slugify": "^1.3.6",
     "validator": "^12.0.0",
     "xss-clean": "^0.1.1"
