--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pug": "^2.0.4",
     "sharp": "^0.23.4",
     "slugify": "^1.3.6",
+    "stripe": "^7.14.0",
     "validator": "^12.0.0",
     "xss-clean": "^0.1.1"
   },
