--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
@@ -60,6 +61,6 @@
     "prettier": "^1.19.1"
   },
   "engines": {
-    "node": ">= 10.0"
+    "node": "^12"
   }
 }
